Custom JRE and cleanup